fix(sidebar, tables): fix sidebar collapsing menu, fix tables columns visibility on mobile

--- a/sass/_bootstrap-override.scss
+++ b/sass/_bootstrap-override.scss
@@ -158,10 +158,12 @@ legend {
 
 .table td > .abc-checkbox,
 .table th > .abc-checkbox{
-  position: relative;
-  margin-top: 0;
-  margin-bottom: 0;
   padding-left: 0;
+
+  > label {
+    padding-left: 0;
+  }
+
   > label:before,
   > label:after{
     margin-left: 0;
